@@ -306,7 +306,7 @@
 
       \item \code{tapply()} gets new option \code{default = NA}
       allowing to change the previously hardcoded value.
-      
+
       \item \code{read.dcf()} now consistently interprets any
       \sQuote{whitespace} to be stripped to include newlines.
     }
@@ -618,6 +618,10 @@
 
       \item Bandwidth selectors \code{bw.ucv()}, \code{bw.bcv()} and
       \code{bw.SJ()} now avoid integer overflow for large sample sizes.
+
+      \item \code{str()} no longer shows \code{"list output truncated"},
+      in cases that list was not shown at all.  Thanks to Neal Fultz
+      (\PR{17219})
     }
   }
 }
@@ -717,7 +721,7 @@
 
       \item \code{qbeta()} underflowed too early in some very asymmetric
       cases.  (\PR{17178})
-      
+
       \item \command{R CMD build} no longer wraps a \samp{BugReports}
       field containing a long URL, which made it unusable in \R <= 3.3.2.
     }
